<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_fixtures"
            android:icon="@drawable/ic_soccer"
            android:title="@string/title_todays_fixtures"/>

    <item
            android:id="@+id/navigation_competitions"
            android:icon="@drawable/ic_soccer_field"
            android:title="@string/title_competitions"/>

</menu>
