<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        style="@style/Competition.Root">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            style="@style/Competition.Root">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rootLayout"
                style="@style/Competition.Root">

                <com.kryptkode.footballfixtures.app.views.EmptyRecyclerView
                    android:id="@+id/recycler_view"
                    style="@style/RecyclerViewStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:id="@+id/empty_layout"
                    layout="@layout/empty_layout" />


                <include
                    android:id="@+id/include_error"
                    layout="@layout/error_layout"
                    android:visibility="gone"
                    tools:visibility="gone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
