...
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/TeamsDetail.Root">


                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/TeamsDetail.Title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.35"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/ic_soccer" />

                    <com.kryptkode.footballfixtures.app.views.EmptyRecyclerView
                        android:id="@+id/recycler_view"
                        style="@style/RecyclerViewStyle"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/team_detail_margin_top"
                        android:clipToPadding="false"
                        android:paddingBottom="@dimen/team_item_padding_text"
                        app:layout_constraintBottom_toBottomOf="parent"
...
